--- a/src/DrumMachine.css
+++ b/src/DrumMachine.css
@@ -35,6 +35,9 @@
     font-weight: bolder;
     font-size: 20px;
 }
+.drum-pad:active{
+    background-color: rgb(182, 182, 8);
+}
 
 .functions{
     width: 50%;
